--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -205,7 +205,7 @@ $sizes: (
 @import "./components/fonts.scss";
 @import "./components/header.scss";
 @import "./components/style.scss";
-@import "./components/icon.scss";
+@import "./components/action.scss";
 @import "./components/layout.scss";
 @import "./components/layer.scss";
 @import "./components/transition.scss";
