--- a/views/components/link.pug
+++ b/views/components/link.pug
@@ -3,5 +3,5 @@ mixin link(value = {})
   - let _class = value.class || "layout-inline";
   - let _href = dev && href[0] === "/" ? (href === "/" ? "/index.html" : `${href}.html`) : href;
 
-  a(href=_href class=_class tabindex="0" title=content)= content
+  a(href=_href class=_class tabindex="0" title=content)&attributes(attributes)= content
     block
