--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -11,14 +11,14 @@ mixin hero(value = {})
         .layout-padding-horz-sub-large--device-phone.layout-padding-horz-sub-large--device-tablet.layout-padding-horz-sub-large--device-laptop.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center.layout-padding-vert-large--device-phone.layout-padding-vert-huge--device-tablet.layout-padding-vert-huge--device-laptop.layout-padding-vert-huge--device-desktop
           .layer-content.layout-contain
             .layer-header
-              h1.style-font-title.layer-title.style-white.style-font-weight-bolder!= title
+              h1.style-font-title.layer-title.style-white.style-font-weight-bolder(itemprop="headline")!= title
             .layer-main
-              h2.h5.style-font-family-bold.style-font-weight-300.style-white.layer-main-text!= content
+              h2.h5.style-font-family-bold.style-font-weight-300.style-white.layer-main-text(itemprop="description")!= content
             .layout-align-self-end
-              button.layer-footer.btn.btn-hover.layer-shadow.layer-round.layout-padding-smallest.layer-white.layer-secondary-light-hover.layer-secondary-focus.style-primary.style-surface-hover.style-surface-focus.layer-hero-scroll-down(type="button" tabindex="0")
-                span.btn-group
-                  i.icon.style-font-sz-24(inline) expand_more
-                  span.btn-section
-                    span.btn-spacer
-                    span.btn-content Scroll Down
-                    span.btn-spacer
+              button.layer-footer.action-btn.action-btn-hover.layer-shadow.layer-round.layout-padding-smallest.layer-white.layer-secondary-light-hover.layer-secondary-focus.style-primary.style-surface-hover.style-surface-focus.layer-hero-scroll-down(type="button" tabindex="0")
+                span.action-btn-group
+                  i.action-icon.style-font-sz-24(inline) expand_more
+                  span.action-btn-section
+                    span.action-btn-spacer
+                    span.action-btn-content Scroll Down
+                    span.action-btn-spacer
