--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -22,9 +22,9 @@ mixin navbar(value = {})
           .layout-spacer
           .navbar-foot.navbar-mobile
             .layout-inline-block
-              a.navbar-menu.btn.layer-round.layout-padding-smaller.layer-transparent.layer-light-hover.style-primary.style-hover-primary.style-focus-primary(title="Menu Bar")
-                span.btn-group
-                  i.icon.style-font-family-bold.style-font-sz-24(inline) menu
+              a.navbar-menu.action-btn.layer-round.layout-padding-smaller.layer-transparent.layer-light-hover.style-primary.style-hover-primary.style-focus-primary(title="Menu Bar")
+                span.action-btn-group
+                  i.action-icon.style-font-family-bold.style-font-sz-24(inline) menu
 
         .layout-spacer.navbar-desktop
         .navbar-main
