--- a/views/components/banner.pug
+++ b/views/components/banner.pug
@@ -8,7 +8,7 @@ mixin banner(value = {})
       .layer-hero.banner-mode
         +image(image)(inline)
 
-        .layout-padding-horz-sub-large--device-phone.layout-padding-horz-sub-large--device-tablet.layout-padding-horz-sub-large--device-laptop.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center.layout-padding-vert-large--device-phone.layout-padding-vert-huge--device-tablet.layout-padding-vert-huge--device-laptop.layout-padding-vert-huge--device-desktop
+        .layout-padding-horz-sub-large--device-lt-laptop.layout-padding-vert-sub-extra-large--device-lt-tablet.layout-padding-vert-huge--device-gt-tablet.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center
           .layer-content.layout-contain
             .layer-header
               h1.style-font-title.layer-title.style-white.style-font-weight-bolder(itemprop="headline")!= title
