--- a/views/components/sections.pug
+++ b/views/components/sections.pug
@@ -3,21 +3,21 @@ mixin head(value = {})
 
   .layer-header(class=_class)
     if typeof value == "string"
-      h3.h4.layout-padding-dull--device-phone.layout-margin-dull--device-phone.style-center.style-font-20--device-phone.style-primary-dark.style-bold= value
+      h3.h4.style-font-30--device-phone.style-primary-dark.style-bold.style-center= value
     block
 
 mixin main(value = {})
-  - let _class = typeof value != "string" ? value.class : "style-font-14--device-phone";
+  - let _class = typeof value != "string" ? value.class : "";
 
   .layer-main(class=_class)
     if typeof value == "string"
-      p.style-line-height-double--tablet.style-line-height-double--laptop.style-line-height-double--desktop= value
+      p.style-font-14--device-phone= value
     block
 
 mixin foot(value = {})
-  - let _class = typeof value != "string" ? value.class : "style-font-14--device-phone";
+  - let _class = typeof value != "string" ? value.class : "";
 
   .layer-footer(class=_class)
     if typeof value == "string"
-      span.style-bold= value
+      span.style-font-14--device-phone.style-bold= value
     block
