--- a/views/components/text.pug
+++ b/views/components/text.pug
@@ -1,6 +1,6 @@
 mixin p(value = {})
   if typeof value == "string"
-    p.style-line-height-double.layout-padding-vert-small.layout-margin-dull.layout-inline !{value}
+    p.layout-padding-vert-small.layout-margin-dull.layout-inline !{value}
       block
 
   else
