--- a/views/pages/projects.pug
+++ b/views/pages/projects.pug
@@ -54,9 +54,9 @@ block content
 		})
 			section.layout-shorten
 				+head
-					h3.h4.style-center.style-white.style-font-light.style-font-thin.style-spaceout Next
+					h3.style-center.style-white.style-font-light.style-font-thin.style-spaceout.style-font-default--device-gt-tablet.style-font-20 Next
 				+main({
-					class: "style-center layout-padding-vert"
+					class: "style-center"
 				})
-					h2.h1.style-bold.style-tertiary.style-500 NASA Rocket Ship
-			.layer-box.layer-box-flat.layer-tertiary-dark.layer-shadow--1.layout-block
+					h2.style-bold.style-tertiary.style-500.style-font-large--device-gt-tablet.style-font-62 NASA
+			.layer-box.layer-box-flat.layer-tertiary-dark.layer-shadow--1.layout-margin-vert-top-larger.layout-block
