--- a/src/scss/components/layout.scss
+++ b/src/scss/components/layout.scss
@@ -14,6 +14,17 @@
         height: 100vh;
     }
 
+    &-vert-centered-box {
+        margin-top: $size-huge;
+        @media (min-width: #{$tablet}px) {
+            align-items: center;
+            position: relative;
+            height: 100vh;
+            display: flex;
+            margin-top: 0;
+        }
+    }
+
     // $dimension: ("width", "height");
     //    @each $axis in $dimension {
     //       $screenSizes: (
@@ -368,7 +379,8 @@
         &-enlarge,
         &-large,
         &-small {
-            margin: 0 auto;
+            margin-right: auto;
+            margin-left: auto;
             width: 100%;
         }
 
@@ -400,7 +412,7 @@
             &-large {
                 max-width: 800px;
             }
-            
+
             &-enlarge {
                 max-width: 900px;
             }
@@ -415,7 +427,7 @@
             &-large {
                 max-width: 1000px;
             }
-            
+
             &-enlarge {
                 max-width: 1100px;
             }
