--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -1,5 +1,26 @@
-mixin footer(value = "Copyright")
-  footer(itemprop="author")
-    .layout-contain
-      .layout-padding.style-center.style-font-weight-bold.style-font-title.style-spaceout-small(itemprop="publisher" itemscope itemtype="https://schema.org/Organization" itemid="https://www.josephojo.com")= value
-        block
+mixin footer(value = {})
+	- let _class = value.class;
+	footer.footer(itemprop="author" class=_class)
+		.layout-contain
+			.layout-padding.style-center.style-font-weight-bold.style-font-title.style-spaceout-small(itemprop="publisher" itemscope itemtype="https://schema.org/Organization" itemid="https://www.josephojo.com")
+				span Made with ❤ by
+				span= " "
+				+link({
+					href: "https://github.com/okikio",
+					content: "Okiki Ojo"
+				})
+				span  |
+				span= " "
+				span.action-btn.pointer-default
+					.action-btn-group
+						i.action-icon(inline) copyright
+						span.action-btn-section
+							span.action-btn-spacer
+							span(itemprop="copyrightYear") 2019
+							span(itemprop="copyrightHolder")  Joseph Ojo -
+							span.action-btn-spacer
+				+link({
+					href: "/sitemap",
+					class: "layout-inline-block"
+				})
+					i Sitemap
