--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -8,12 +8,12 @@ mixin hero(value = {})
       .layer-hero.header-top-spot
         +image(image)(inline)
 
-        .layout-padding-horz-sub-large--device-phone.layout-padding-horz-sub-large--device-tablet.layout-padding-horz-sub-large--device-laptop.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center.layout-padding-vert-large--device-phone.layout-padding-vert-huge--device-tablet.layout-padding-vert-huge--device-laptop.layout-padding-vert-huge--device-desktop
+        .layout-padding-horz-sub-large--device-lt-laptop.layout-padding-vert-sub-extra-large--device-lt-tablet.layout-padding-vert-huge--device-gt-tablet.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center
           .layer-content.layout-contain
             .layer-header
               h1.style-font-title.layer-title.style-white.style-font-weight-bolder(itemprop="headline")!= title
             .layer-main
-              h2.h5.style-font-family-bold.style-font-weight-300.style-white.layer-main-text(itemprop="description")!= content
+              h2.style-font-family-bold.style-font-weight-300.style-white.layer-main-text(itemprop="description")!= content
             .layout-align-self-end
               button.layer-footer.action-btn.action-btn-hover.layer-shadow.layer-round.layout-padding-smallest.layer-white.layer-secondary-light-hover.layer-secondary-focus.style-primary.style-surface-hover.style-surface-focus.layer-hero-scroll-down(type="button" tabindex="0")
                 span.action-btn-group
