--- a/views/pages/contact.pug
+++ b/views/pages/contact.pug
@@ -1,6 +1,7 @@
 extends ../app.pug
 include ../components/sections.pug
 include ../components/layout.pug
+include ../components/footer.pug
 include ../components/layer.pug
 include ../components/text.pug
 
@@ -16,36 +17,40 @@ block pageInfo
 block content
 	//- Intro layer
 	+layer({
-		class: "layout-padding-horz layout-enlarge-vert"
+		class: "layout-padding-horz"
 	})
 		+layout({
-			class: "layout-contain style-line-height-double"
+			class: "layout-contain-small layout-vert-centered-box"
 		})
-			+head
-				h1.layout-padding-dull--device-phone.layout-margin-dull--device-phone.style-font-20--device-phone.style-primary-dark.style-bold.style-uppercase Say Hello
-			+main
-				span(itemprop='author') Hey, I am Joseph Ojo, the man, the myth, the legend, let's talk.
-				section(itemtype='https://schema.org/Person')
-					+p("You can find me at:")
-					+link({
-						href: "https://www.linkedin.com/in/o-josephojo/",
-						class: "layout-margin-horz-small",
-						content: "LinkedIn"
-					})
-					span -
-					+link({
-						href: "https://github.com/laoluojo",
-						class: "layout-margin-horz-small",
-						content: "Github"
-					})
-					span -
-					span(itemprop="email")
-						+link({
-							href: "mailto:laoluojo@gmail.com",
-							class: "layout-margin-horz-small",
-							content: "Email"
-						})
-					section.layout-margin-vert-top(itemprop='description')
-						p.layout-inline.layout-margin-dull(lorem="3")
+			section
+				+head
+					h1.style-font-30--device-phone.style-primary-dark.style-bold.style-uppercase Say Hello
+				+main
+					span(itemprop='author') Hey, I am Joseph Ojo, the man, the myth, the legend, let's talk.
+					span.layout-margin-vert-bottom(itemprop='description')
+						p.layout-inline.layout-margin-dull(lorem="1")
 						span(itemtype='https://schema.org/EducationalOrganization' itemprop="alumniOf")
 							|  I am an alumni of OnTech - Ontario Tech University
+					section(itemtype='https://schema.org/Person')
+						+p("You can find me at:")
+						ul
+							li
+								+link({
+									href: "https://www.linkedin.com/in/o-josephojo/",
+									content: "LinkedIn"
+								})
+							li
+								+link({
+									href: "https://github.com/laoluojo",
+									content: "Github"
+								})
+							li(itemprop="email")
+								+link({
+									href: "mailto:laoluojo@gmail.com",
+									content: "Email"
+								})
+
+block footer
+	+footer({
+		class: "footer-stuck layout-margin-vert-top"
+	})
